fix: correct pinned services alignment to prevent container overlap

--- a/assets/scss/pages/_front-page-services.scss
+++ b/assets/scss/pages/_front-page-services.scss
@@ -37,8 +37,7 @@
   position: sticky;
   top: 0;
   height: 100svh;
-  display: flex;
-  align-items: flex-end;
+  display: block;
 }
 
 .services-section--horizontal .services-section__container {
